Updated Greek translation

--- a/po/el.po
+++ b/po/el.po
@@ -19,9 +19,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: el\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-04-01 10:05+0300\n"
-"PO-Revision-Date: 2011-03-20 22:43+0200\n"
-"Last-Translator: George Stefanakis <george.stefanakis@gmail.com>\n"
+"POT-Creation-Date: 2012-05-03 11:47+0300\n"
+"PO-Revision-Date: 2012-04-23 12:02+0200\n"
+"Last-Translator: Tom Tryfonidis <tomtryf@gmail.com>\n"
 "Language-Team: Greek <team@gnome.gr>\n"
 "Language: el\n"
 "MIME-Version: 1.0\n"
@@ -31,7 +31,7 @@ msgstr ""
 
 #: yelp.xml:2(msg/msgstr)
 msgid "Install <_:string-1/>"
-msgstr ""
+msgstr "Εγκατάσταση <_:string-1/>"
 
 #: ../libyelp/yelp-bz2-decompressor.c:146
 #: ../libyelp/yelp-lzma-decompressor.c:155
@@ -109,7 +109,7 @@ msgstr "Το URI που προσδιορίζει αυτό το κείμενο"
 #: ../libyelp/yelp-document.c:994
 #, c-format
 msgid "Search results for “%s”"
-msgstr ""
+msgstr "Αποτελέσματα αναζήτησης για “%s”"
 
 #: ../libyelp/yelp-document.c:1006
 #, c-format
@@ -180,7 +180,7 @@ msgstr "Αφαίρεση του σελιδοδείκτη"
 #: ../libyelp/yelp-location-entry.c:1154
 #, c-format
 msgid "Search for “%s”"
-msgstr ""
+msgstr "Αναζήτηση για “%s”"
 
 #: ../libyelp/yelp-location-entry.c:1458
 msgid "Loading"
@@ -357,9 +357,8 @@ msgid "Send email to %s"
 msgstr "Αποστολή μηνύματος στον %s"
 
 #: ../libyelp/yelp-view.c:1286
-#, fuzzy
 msgid "_Install Packages"
-msgstr "Σελίδες εγχειριδίου"
+msgstr "_Εγκατάσταση πακέτων"
 
 #: ../libyelp/yelp-view.c:1294
 msgid "_Open Link"
@@ -367,9 +366,8 @@ msgstr "Άνοιγμα _δεσμού"
 
 #
 #: ../libyelp/yelp-view.c:1301
-#, fuzzy
 msgid "_Copy Link Location"
-msgstr "Άνοιγμα τοποθεσίας"
+msgstr "Αντι_γραφή τοποθεσίας δεσμού"
 
 #: ../libyelp/yelp-view.c:1307
 msgid "Open Link in New _Window"
@@ -406,7 +404,7 @@ msgstr "Αποθήκευση μ_πλοκ κώδικα ως…"
 #: ../libyelp/yelp-view.c:1505
 #, c-format
 msgid "See all search results for “%s”"
-msgstr ""
+msgstr "Δείτε όλα τα αποτελέσματα αναζήτησης για “%s”"
 
 #: ../libyelp/yelp-view.c:1626
 #, c-format
@@ -537,13 +535,12 @@ msgid "A YelpApplication instance that controls this window"
 msgstr "Μια περίσταση YelpApplication η οποία ελέγχει αυτό το παράθυρο"
 
 #: ../src/yelp-window.c:429
-#, fuzzy
 msgid "Read Link _Later"
-msgstr "Να το διαβάσω αργότερα"
+msgstr "Ανάγνωση συνδέσμου _αργότερα"
 
 #: ../src/yelp-window.c:526
 msgid "Find:"
-msgstr ""
+msgstr "Εύρεση:"
 
 #: ../src/yelp-window.c:548
 msgid "Read Later"
@@ -629,609 +626,3 @@ msgstr "Λήψη βοήθειας για το GNOME"
 
 #~ msgid "Readline Functions"
 #~ msgstr "Συναρτήσεις Readline"
-
-#
-#~ msgid "Section 0p"
-#~ msgstr "Ενότητα 0p"
-
-#
-#~ msgid "Section 1m"
-#~ msgstr "Ενότητα 1m"
-
-#~ msgid "Section 1ssl"
-#~ msgstr "Ενότητα 1ssl"
-
-#
-#~ msgid "Section 1x"
-#~ msgstr "Ενότητα 1x"
-
-#
-#~ msgid "Section 2"
-#~ msgstr "Ενότητα 2"
-
-#~ msgid "Section 3blt"
-#~ msgstr "Ενότητα 3blt"
-
-#
-#~ msgid "Section 3f"
-#~ msgstr "Ενότητα 3f"
-
-#~ msgid "Section 3nas"
-#~ msgstr "Ενότητα 3nas"
-
-#
-#~ msgid "Section 3p"
-#~ msgstr "Ενότητα 3p"
-
-#~ msgid "Section 3qt"
-#~ msgstr "Ενότητα 3qt"
-
-#~ msgid "Section 3readline"
-#~ msgstr "Ενότητα 3readline"
-
-#~ msgid "Section 3ssl"
-#~ msgstr "Ενότητα 3ssl"
-
-#~ msgid "Section 3tiff"
-#~ msgstr "Ενότητα 3tiff"
-
-#
-#~ msgid "Section 4"
-#~ msgstr "Ενότητα 4"
-
-#
-#~ msgid "Section 4x"
-#~ msgstr "Ενότητα 4x"
-
-#
-#~ msgid "Section 5"
-#~ msgstr "Ενότητα 5"
-
-#~ msgid "Section 5ssl"
-#~ msgstr "Ενότητα 5ssl"
-
-#
-#~ msgid "Section 5x"
-#~ msgstr "Ενότητα 5x"
-
-#
-#~ msgid "Section 6"
-#~ msgstr "Ενότητα 6"
-
-#
-#~ msgid "Section 6x"
-#~ msgstr "Ενότητα 6x"
-
-#~ msgid "Section 7ssl"
-#~ msgstr "Ενότητα 7ssl"
-
-#
-#~ msgid "Section 7x"
-#~ msgstr "Ενότητα 7x"
-
-#
-#~ msgid "Section 9"
-#~ msgstr "Ενότητα 9"
-
-#~ msgid "Sections 1, 1p, 1g and 1t"
-#~ msgstr "Ενότητες 1, 1p, 1g και 1t"
-
-#~ msgid "Sections 3, 3o, and 3t"
-#~ msgstr "Ενότητες 3, 3o, και 3t"
-
-#~ msgid "Sections 3form and 3menu"
-#~ msgstr "Ενότητες 3form και 3menu"
-
-#~ msgid "Sections 3ncurses and 3curses"
-#~ msgstr "Ενότητες 3ncurses και 3curses"
-
-#~ msgid "Sections 3pm and 3perl"
-#~ msgstr "Ενότητες 3pm και 3perl"
-
-#~ msgid "Sections 3x and 3X11"
-#~ msgstr "Ενότητες 3x και 3X11"
-
-#~ msgid "Sections 7 and 7gcc"
-#~ msgstr "Ενότητες 7 και 7gcc"
-
-#~ msgid "Sections 8 and 8l"
-#~ msgstr "Ενότητες 8 και 8l"
-
-#~ msgid "System Administration"
-#~ msgstr "Διαχείριση Συστήματος"
-
-#~ msgid "System Calls"
-#~ msgstr "Κλήσεις Συστήματος"
-
-#~ msgid "System V Form/Menu Functions"
-#~ msgstr "Λειτουργίες System V Form/Menu"
-
-#~ msgid "TIFF Functions"
-#~ msgstr "Συναρτήσεις TIFF"
-
-#~ msgid "Termcap Applications"
-#~ msgstr "Εφαρμογές Termcap"
-
-#~ msgid "Traditional command line help (man)"
-#~ msgstr "Παραδοσιακή βοήθεια γραμμής εντολών (man)"
-
-#~ msgid "X11 Applications"
-#~ msgstr "Εφαρμογές X11"
-
-#~ msgid "X11 Configuration"
-#~ msgstr "Ρυθμίσεις X11"
-
-#~ msgid "X11 Devices"
-#~ msgstr "Συσκευές X11"
-
-#~ msgid "X11 Functions"
-#~ msgstr "Συναρτήσεις Χ11"
-
-#~ msgid "X11 Games"
-#~ msgstr "Παιχνίδια X11"
-
-#~ msgid "X11 Overviews"
-#~ msgstr "Επισκοπήσεις X11"
-
-#~ msgid "2D Graphics"
-#~ msgstr "Γραφικά δύο διαστάσεων"
-
-#~ msgid "3D Graphics"
-#~ msgstr "Τρισδιάστατα γραφικά"
-
-#~ msgid "Accessibility"
-#~ msgstr "Προσιτότητα"
-
-#~ msgid "Action Games"
-#~ msgstr "Παιχνίδια δράσης"
-
-#~ msgid "Adventure Games"
-#~ msgstr "Παιχνίδια περιπέτειας"
-
-#~ msgid "Amusement"
-#~ msgstr "Ψυχαγωγία"
-
-#~ msgid "Applications for viewing and manipulating graphics"
-#~ msgstr "Εφαρμογές για την προβολή και τη διαχείριση γραφικών"
-
-#~ msgid "Applications related to audio and video"
-#~ msgstr "Εφαρμογές σχετικές με ήχο και βίντεο"
-
-#~ msgid "Applications that teach or aid in learning"
-#~ msgstr "Εφαρμογές που διδάσκουν ή βοηθούν στη μάθηση"
-
-#~ msgid "Arcade Games"
-#~ msgstr "Παιχνίδια arcade"
-
-#~ msgid "Archiving Tools"
-#~ msgstr "Εργαλεία αρχειοθέτησης"
-
-#~ msgid "Art"
-#~ msgstr "Τέχνη"
-
-#~ msgid "Artificial Intelligence"
-#~ msgstr "Τεχνητή νοημοσύνη"
-
-#~ msgid "Astronomy"
-#~ msgstr "Αστρονομία"
-
-#~ msgid "Biology"
-#~ msgstr "Βιολογία"
-
-#~ msgid "Blocks Games"
-#~ msgstr "Παιχνίδια με κύβους"
-
-#~ msgid "Board Games"
-#~ msgstr "Επιτραπέζια παιχνίδια"
-
-#~ msgid "Building"
-#~ msgstr "Κατασκευή"
-
-#~ msgid "Calculator"
-#~ msgstr "Υπολογιστής"
-
-#~ msgid "Calendar"
-#~ msgstr "Ημερολόγιο"
-
-#~ msgid "Card Games"
-#~ msgstr "Χαρτοπαίγνια"
-
-#~ msgid "Charting Tools"
-#~ msgstr "Εργαλεία καταχώρησης"
-
-#~ msgid "Chat"
-#~ msgstr "Συνομιλία"
-
-#~ msgid "Chemistry"
-#~ msgstr "Χημεία"
-
-#~ msgid "Clocks"
-#~ msgstr "Ρολόγια"
-
-#~ msgid "Compression Tools"
-#~ msgstr "Εργαλεία συμπίεσης"
-
-#~ msgid "Computer Science"
-#~ msgstr "Επιστήμη υπολογιστών"
-
-#~ msgid "Construction"
-#~ msgstr "Κατασκευή"
-
-#~ msgid "Contact Management"
-#~ msgstr "Διαχείριση επαφών"
-
-#~ msgid "Data Visualization"
-#~ msgstr "Απεικόνιση δεδομένων"
-
-#~ msgid "Databases"
-#~ msgstr "Βάσεις δεδομένων"
-
-#~ msgid "Debuggers"
-#~ msgstr "Βοηθοί αποσφαλμάτωσης"
-
-#~ msgid "Desktop"
-#~ msgstr "Επιφάνεια εργασίας"
-
-#~ msgid "Desktop Settings"
-#~ msgstr "Ρυθμίσεις επιφάνειας εργασίας"
-
-#~ msgid "Dialup"
-#~ msgstr "Τηλεφωνική σύνδεση"
-
-#~ msgid "Dictionaries"
-#~ msgstr "Λεξικά"
-
-#~ msgid "Disc Burning"
-#~ msgstr "Εγγραφή δίσκων"
-
-#~ msgid "Economy"
-#~ msgstr "Οικονομία"
-
-#
-#~ msgid "Education"
-#~ msgstr "Εκπαίδευση"
-
-#~ msgid "Electricity"
-#~ msgstr "Ηλεκτρισμός"
-
-#~ msgid "Electronics"
-#~ msgstr "Ηλεκτρονική"
-
-#~ msgid "Email Tools"
-#~ msgstr "Εργαλεία για ηλ. αλληλογραφία"
-
-#~ msgid "Emulator"
-#~ msgstr "Προσομοιωτής"
-
-#~ msgid "Engineering"
-#~ msgstr "Μηχανική"
-
-#~ msgid "File Manager"
-#~ msgstr "Διαχειριστής αρχείων"
-
-#~ msgid "File Tools"
-#~ msgstr "Εργαλεία συστήματος αρχείων"
-
-#~ msgid "File Transfer"
-#~ msgstr "Μεταφορά αρχείων"
-
-#~ msgid "Filesystem"
-#~ msgstr "Σύστημα αρχείων"
-
-#~ msgid "Financial Tools"
-#~ msgstr "Εμπορικά εργαλεία"
-
-#~ msgid "Flow Charting Tools"
-#~ msgstr "Εργαλεία καταχώρησης ροών"
-
-#~ msgid "GNOME Applications"
-#~ msgstr "Εφαρμογές του GNOME"
-
-#~ msgid "GTK"
-#~ msgstr "GTK"
-
-#~ msgid "GUI Designers"
-#~ msgstr "Σχεδιαστές GUI"
-
-#~ msgid "Generic applications for the GNOME environment"
-#~ msgstr "Γενικές εφαρμογές για το γραφικό περιβάλλον του GNOME"
-
-#~ msgid "Generic applications for the KDE environment"
-#~ msgstr "Γενικευμένες εφαρμογές για το γραφικό περιβάλλον του KDE"
-
-#~ msgid "Geography"
-#~ msgstr "Γεωγραφία"
-
-#~ msgid "Geology"
-#~ msgstr "Γεωλογία"
-
-#~ msgid "Geoscience"
-#~ msgstr "Γεωλογικές επιστήμες"
-
-#~ msgid "Graphics"
-#~ msgstr "Γραφικά"
-
-#~ msgid ""
-#~ "Guides and manuals for applications that connect to the outside world"
-#~ msgstr ""
-#~ "Οδηγοί και εγχειρίδια για εφαρμογές που συνδέονται με τον εξωτερικό κόσμο"
-
-#~ msgid "Guides for getting involved in development"
-#~ msgstr "Οδηγοί που σχετίζονται με την ανάπτυξη λογισμικού"
-
-#~ msgid "Ham Radio"
-#~ msgstr "Ραδιοερασιτέχνες"
-
-#~ msgid "Hardware Settings"
-#~ msgstr "Ρυθμίσεις υλικού"
-
-#~ msgid "Have some fun"
-#~ msgstr "Διασκεδάστε"
-
-#~ msgid "History"
-#~ msgstr "Ιστορία"
-
-#~ msgid "IDEs"
-#~ msgstr "Ενσωματωμένα περιβάλλοντα ανάπτυξης (IDE)"
-
-#~ msgid "IRC Clients"
-#~ msgstr "Πελάτες IRC"
-
-#~ msgid "Image Processing"
-#~ msgstr "Επεξεργασία εικόνας"
-
-#~ msgid "Instant Messaging"
-#~ msgstr "Εφαρμογή άμεσων μηνυμάτων"
-
-#~ msgid "Internet"
-#~ msgstr "Διαδίκτυο"
-
-#~ msgid "Java"
-#~ msgstr "Java"
-
-#~ msgid "KDE Applications"
-#~ msgstr "Εφαρμογές του KDE"
-
-#~ msgid "Kids Games"
-#~ msgstr "Παιχνίδια για παιδιά"
-
-#~ msgid ""
-#~ "Learn more about making your system more accessible for a range of "
-#~ "disabilities"
-#~ msgstr ""
-#~ "Μάθετε περισσότερα για να κάνετε το σύστημά σας πιο προσβάσιμο σε χρήστες "
-#~ "με ειδικές ανάγκες"
-
-#~ msgid "Licenses"
-#~ msgstr "Άδειες"
-
-#~ msgid "Literature"
-#~ msgstr "Λογοτεχνία"
-
-#~ msgid "Logic Games"
-#~ msgstr "Λογικά παιχνίδια"
-
-#~ msgid "Math"
-#~ msgstr "Μαθηματικά"
-
-#~ msgid "Medical Software"
-#~ msgstr "Ιατρικό λογισμικό"
-
-#~ msgid "Midi"
-#~ msgstr "Midi"
-
-#~ msgid "Miscellaneous Documentation"
-#~ msgstr "Πολυποίκιλη τεκμηρίωση"
-
-#~ msgid "Mixers"
-#~ msgstr "Μείκτες"
-
-#~ msgid "Monitor"
-#~ msgstr "Οθόνη"
-
-#~ msgid "Motif"
-#~ msgstr "Διαχειριστής παραθύρων Motif"
-
-#~ msgid "Music"
-#~ msgstr "Μουσική"
-
-#~ msgid "News"
-#~ msgstr "Ειδήσεις"
-
-#~ msgid "Numerical Analysis"
-#~ msgstr "Αριθμητική ανάλυση"
-
-#~ msgid "OCR"
-#~ msgstr "OCR"
-
-#~ msgid "Office Applications"
-#~ msgstr "Εφαρμογές γραφείου"
-
-#~ msgid "Office applications"
-#~ msgstr "Εφαρμογές γραφείου"
-
-#~ msgid "Other Documentation"
-#~ msgstr "Άλλη τεκμηρίωση"
-
-#~ msgid "P2P"
-#~ msgstr "P2P"
-
-#~ msgid "PDA Communication"
-#~ msgstr "Σύνδεση με PDA"
-
-#~ msgid "Package Manager"
-#~ msgstr "Διαχειριστής πακέτων"
-
-#~ msgid "Parallel Computing"
-#~ msgstr "Παράλληλος υπολογισμός"
-
-#~ msgid "Photography"
-#~ msgstr "Φωτογραφική τέχνη"
-
-#~ msgid "Physics"
-#~ msgstr "Φυσική"
-
-#~ msgid "Players"
-#~ msgstr "Αναπαραγωγή ήχου και βίντεο"
-
-#~ msgid "Presentation Tools"
-#~ msgstr "Εργαλεία παρουσίασης"
-
-#~ msgid "Printing"
-#~ msgstr "Εκτύπωση"
-
-#~ msgid "Profiling Tools"
-#~ msgstr "Εργαλεία ελέγχου επιδόσεων"
-
-#~ msgid "Project Management Tools"
-#~ msgstr "Εργαλεία διαχείρισης έργου"
-
-#~ msgid "Publishing"
-#~ msgstr "Δημοσίευση"
-
-#~ msgid "Qt"
-#~ msgstr "Qt"
-
-#~ msgid "Raster Graphics"
-#~ msgstr "Ψηφιακά γραφικά"
-
-#~ msgid "Recorders"
-#~ msgstr "Συσκευές εγγραφής ήχου και βίντεο"
-
-#~ msgid "Remote Access"
-#~ msgstr "Απομακρυσμένη πρόσβαση"
-
-#~ msgid "Revision Control"
-#~ msgstr "Έλεγχος αναθεώρησης"
-
-#~ msgid "Robotics"
-#~ msgstr "Ρομποτική"
-
-#~ msgid "Role Playing Games"
-#~ msgstr "Παιχνίδια με ρόλους"
-
-#~ msgid "Scanning"
-#~ msgstr "Σάρωση"
-
-#~ msgid "Science"
-#~ msgstr "Επιστήμη"
-
-#~ msgid "Security"
-#~ msgstr "Ασφάλεια"
-
-#~ msgid "Sequencers"
-#~ msgstr "Μουσικά εργαλεία"
-
-#~ msgid "Settings"
-#~ msgstr "Ρυθμίσεις"
-
-#~ msgid ""
-#~ "Settings users can manipulate to make their environment more pleasant"
-#~ msgstr ""
-#~ "Ρυθμίσεις που έχουν τη δυνατότητα να διαχειριστούν οι χρήστες για να "
-#~ "κάνουν το γραφικό περιβάλλον τους πιο ευχάριστο"
-
-#~ msgid "Simulation Games"
-#~ msgstr "Παιχνίδια εξομοίωσης"
-
-#~ msgid "Sound"
-#~ msgstr "Ήχος"
-
-#~ msgid "Sound &amp; Video"
-#~ msgstr "Ήχος &amp; Βίντεο"
-
-#~ msgid "Sound &amp; Video Editing"
-#~ msgstr "Ήχος &amp, Επεξεργασία βίντεο"
-
-#~ msgid "Sports"
-#~ msgstr "Αθλήματα"
-
-#~ msgid "Sports Games"
-#~ msgstr "Αθλητικά παιχνίδια"
-
-#~ msgid "Spreadsheet Tools"
-#~ msgstr "Εργαλεία λογιστικών φύλλων"
-
-#~ msgid "Strategy Games"
-#~ msgstr "Παιχνίδια στρατηγικής"
-
-#~ msgid "System"
-#~ msgstr "Σύστημα"
-
-#~ msgid "TV"
-#~ msgstr "Τηλεόραση"
-
-#~ msgid "Telephony"
-#~ msgstr "Τηλεφωνία"
-
-#~ msgid "Telephony Tools"
-#~ msgstr "Εργαλεία τηλεφωνίας"
-
-#~ msgid "Terminal Emulator"
-#~ msgstr "Προσομοιωτής τερματικού"
-
-#~ msgid "Text Editors"
-#~ msgstr "Συντάκτες κειμένου"
-
-#~ msgid "Text Tools"
-#~ msgstr "Εργαλεία κειμένου"
-
-#~ msgid "Tools to help you manage your computer"
-#~ msgstr "Βοηθήματα που βοηθούν στη διαχείριση του υπολογιστή σας"
-
-#~ msgid "Translation Tools"
-#~ msgstr "Εργαλεία μετάφρασης"
-
-#~ msgid "Tuners"
-#~ msgstr "Συντονιστές"
-
-#~ msgid "Utilities"
-#~ msgstr "Εργαλεία"
-
-#~ msgid "Utilities to help you get work done"
-#~ msgstr "Βοηθήματα για τη διεκπεραίωση των εργασιών σας"
-
-#~ msgid "Vector Graphics"
-#~ msgstr "Διανυσματικά γραφικά"
-
-#~ msgid "Video"
-#~ msgstr "Βίντεο"
-
-#~ msgid "Video Conference"
-#~ msgstr "Επικοινωνία με βίντεο"
-
-#~ msgid "Viewer"
-#~ msgstr "Παρατηρητής"
-
-#~ msgid "Web Browser"
-#~ msgstr "Περιηγητής διαδικτύου"
-
-#~ msgid "Web Development"
-#~ msgstr "Ανάπτυξη εφαρμογών διαδικτύου"
-
-#~ msgid "Welcome to the GNOME Help Browser"
-#~ msgstr "Καλώς ήλθατε στο περιηγητή βοήθειας του GNOME"
-
-#~ msgid "Word Processors"
-#~ msgstr "Επεξεργαστές κειμένου"
-
-#~ msgid "_Edit Bookmarks"
-#~ msgstr "_Επεξεργασία σελιδοδεικτών"
-
-#~ msgid "Bookmarks for %s"
-#~ msgstr "Σελιδοδείκτες για «%s»"
-
-#~ msgid "_Open Bookmark"
-#~ msgstr "Άν_οιγμα σελιδοδείκτη"
-
-#~ msgid "Open Bookmark in New _Window"
-#~ msgstr "Άνοι_γμα σελιδοδείκτη σε νέο παράθυρο"
-
-#~ msgid "translator-credits"
-#~ msgstr ""
-#~ "Ελληνική μεταφραστική ομάδα GNOME\n"
-#~ " Σίμος Ξενιτέλλης <simos@gnome.org>\n"
-#~ " Κώστας Παπαδήμας <pkst@gnome.org>\n"
-#~ " Γιάννης Κατσαμπίρης <giannis1_86@hotmail.com>\n"
-#~ "\n"
-#~ "Για περισσότερα δείτε http://www.gnome.gr/"
