Fixed my mistake in generating yelp.pot for xslt translations
I was generating the POT file from the generated yelp.xml instead
of from the source yelp.xml.in. Since the generated file doesn't
have the ITS rules, <string/> was not withinText, so itstool used
a placeholder, so no translations actually matched.

I fixed the Makefile and all of the translations.

Also, I was using ALL_LINGUAS to create the POT file, just like
yelp-xsl does. But I wasn't setting ALL_LINGUAS in configure.ac.
Fixed.

--- a/po/fi.po
+++ b/po/fi.po
@@ -33,9 +33,18 @@ msgstr ""
 "X-Generator: MediaWiki 1.20alpha (r113129); Translate 2012-03-02\n"
 "X-POT-Import-Date: 2012-03-05 14:44:08+0000\n"
 
-#: yelp.xml:2(msg/msgstr)
-msgid "Install <_:string-1/>"
-msgstr "Asenna <_:string-1/>"
+#. ID: install.tooltip
+#. This is a format message used to format tooltips on install: links. These
+#. links allow users to install packages by clicking a link in the help. The
+#. tooltip may also be used as the link text, if there's no link text in the
+#. document. Special elements in the message will be replaced with the
+#. appropriate content, as follows:
+#. 
+#. <string/> - The package to install
+#. 
+#: yelp.xml.in:29(msg/msgstr)
+msgid "Install <string/>"
+msgstr "Asenna <string/>"
 
 #: ../libyelp/yelp-bz2-decompressor.c:146
 #: ../libyelp/yelp-lzma-decompressor.c:155
