--- a/po/ru.po
+++ b/po/ru.po
@@ -18,10 +18,18 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
-#: yelp.xml:2(msg/msgstr)
-#| msgid "Install <string/>"
-msgid "Install <_:string-1/>"
-msgstr "Установить <_:string-1/>"
+#. ID: install.tooltip
+#. This is a format message used to format tooltips on install: links. These
+#. links allow users to install packages by clicking a link in the help. The
+#. tooltip may also be used as the link text, if there's no link text in the
+#. document. Special elements in the message will be replaced with the
+#. appropriate content, as follows:
+#. 
+#. <string/> - The package to install
+#. 
+#: yelp.xml.in:29(msg/msgstr)
+msgid "Install <string/>"
+msgstr "Установить <string/>"
 
 #: ../libyelp/yelp-bz2-decompressor.c:146
 #: ../libyelp/yelp-lzma-decompressor.c:155
