--- a/po/et.po
+++ b/po/et.po
@@ -26,8 +26,18 @@ msgstr ""
 "Content-Transfer-Encoding: 8bits\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
-msgid "Install <_:string-1/>"
-msgstr "Paigalda <_:string-1/>"
+#. ID: install.tooltip
+#. This is a format message used to format tooltips on install: links. These
+#. links allow users to install packages by clicking a link in the help. The
+#. tooltip may also be used as the link text, if there's no link text in the
+#. document. Special elements in the message will be replaced with the
+#. appropriate content, as follows:
+#. 
+#. <string/> - The package to install
+#. 
+#: yelp.xml.in:29(msg/msgstr)
+msgid "Install <string/>"
+msgstr "Paigalda <string/>"
 
 msgid "Invalid compressed data"
 msgstr "Vigaselt pakitud andmed"
