--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+3.4.2
+=====
+* Fixed mistake in handling an XSLT translation message
+* Updated translations:
+  el    (Tom Tryfonidis)
+  ja    (Mitsuya Shibata)
+
 3.4.1
 =====
 * Updated translations:
