Small fixes to header of Slovak translation

--- a/po/sk.po
+++ b/po/sk.po
@@ -1,5 +1,5 @@
 # Slovak translation for yelp.
-# Copyright (C) 2001, 2002, 2003, 2004, 2005, 2010, 2011 Free Software Foundation, Inc.
+# Copyright (C) 2001, 2002, 2003, 2004, 2005, 2010, 2011, 2012 Free Software Foundation, Inc.
 # This file is distributed under the same license as the yelp package.
 # Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>, 2001, 2002, 2003.
 # Stanislav Visnovsky <visnovsky@kde.org>, 2004.
@@ -14,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=yelp&keywords=I18N+L10N&component=General\n"
 "POT-Creation-Date: 2012-05-14 18:17+0000\n"
-"PO-Revision-Date: 2012-02-11 17:59+0000\n"
+"PO-Revision-Date: 2012-02-11 18:59+0100\n"
 "Last-Translator: Pavol Klačanský <pavol@klacansky.com>\n"
 "Language-Team: Slovak <gnome-sk-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
