--- a/po/et.po
+++ b/po/et.po
@@ -16,14 +16,14 @@ msgstr ""
 "Project-Id-Version: yelp MASTER\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=yelp&keywords=I18N+L10N&component=General\n"
-"POT-Creation-Date: 2012-02-29 02:30+0000\n"
-"PO-Revision-Date: 2012-03-01 12:33+0200\n"
+"POT-Creation-Date: 2012-07-16 07:47+0000\n"
+"PO-Revision-Date: 2012-08-08 07:15+0300\n"
 "Last-Translator: Mattias Põldaru <mahfiaz@gmail.com>\n"
-"Language-Team: Estonian <>\n"
+"Language-Team: Estonian <gnome-et@linux.ee>\n"
 "Language: et\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bits\n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
 #. ID: install.tooltip
@@ -32,10 +32,9 @@ msgstr ""
 #. tooltip may also be used as the link text, if there's no link text in the
 #. document. Special elements in the message will be replaced with the
 #. appropriate content, as follows:
-#. 
+#.
 #. <string/> - The package to install
-#. 
-#: yelp.xml.in:29(msg/msgstr)
+#.
 msgid "Install <string/>"
 msgstr "Paigalda <string/>"
 
