--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+3.5.90
+======
+* Fixed new-style Mallard conditional processing
+* Updated translations:
+  as    (Nilamdyuti Goswami)
+  et    (Mattias Põldaru)
+  gl    (Fran Diéguez)
+  mr    (Sandeep Sheshrao Shedmake)
+  sk    (Pavol Šimo, Pavol Klačanský)
+
 3.4.2
 =====
 * Fixed mistake in handling an XSLT translation message
