--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+3.5.91
+======
+* Fixed gettext warnings for man and info
+* Allow dots in man page names, #676482 (Matthias Clasen)
+* Updated translations:
+  as    (Nilamdyuti Goswami)
+
 3.5.90
 ======
 * Fixed new-style Mallard conditional processing
