--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+3.5.92
+======
+* Updated translations:
+  ml    (Ani Peter)
+  pl    (Piotr Drąg)
+
 3.5.91
 ======
 * Fixed gettext warnings for man and info
