--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+3.6.0
+=====
+* Updated translations:
+  ky    (Timur Zhamakeev)
+  lv    (Rūdolfs Mazurs)
+  th    (Theppitak Karoonboonyanan)
+
 3.5.92
 ======
 * Updated translations:
