--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+3.6.2
+=====
+* Fixed if:test="action:install"
+* Updated translations:
+  bn_IN (Runa Bhattacharjee)
+  or    (ManojKumar Giri)
+
 3.6.1
 =====
 * Updated translations:
