--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+3.7.3
+=====
+* Add keywords to the desktop file (Matthias Clasen)
+* Fixed handling of xref links with anchors, #686095 (Tails developers)
+* Fixed various memory management bugs, #683100 (Carlos Garcia Campos)
+* Added local copy of MathJax for MathML display (Shaun McCance)
+* Added support for xdg help system in All Documents (Shaun McCance)
+* Fixed if:test="action:install" (Shaun McCance)
+* Switched to using 'itstool -j' for XSL domain (Shaun McCance)
+
 3.6.1
 =====
 * Updated translations:
