--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+3.7.4
+=====
+* Updated translations:
+  el    (Dimitris Spingos)
+  kn    (Shankar Prasad)
+  pl    (Piotr Drąg)
+
 3.7.3
 =====
 * Add keywords to the desktop file (Matthias Clasen)
