Updated Korean translation

--- a/po/ko.po
+++ b/po/ko.po
@@ -2,7 +2,7 @@
 # This file is under the same license as the yelp package.
 #
 # Young-Ho, Cha <ganadist@chollian.net>, 2002, 2005, 2007.
-# Changwoo Ryu <cwryu@debian.org>, 2004-2012.
+# Changwoo Ryu <cwryu@debian.org>, 2004-2013.
 #
 msgid ""
 msgstr ""
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=yelp&keywords=I18N+L10N&component=General\n"
 "POT-Creation-Date: 2012-02-23 18:38+0000\n"
-"PO-Revision-Date: 2012-03-11 00:49+0900\n"
+"PO-Revision-Date: 2013-03-17 20:15+0900\n"
 "Last-Translator: Changwoo Ryu <cwryu@debian.org>\n"
 "Language-Team: GNOME Korea <gnome-kr@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -228,7 +228,7 @@ msgstr "편집기 모드"
 
 #: ../libyelp/yelp-settings.c:191
 msgid "Enable features useful to editors"
-msgstr "편집기에 유용한 기능들을 사용합니다"
+msgstr "편집기에 유용한 기능을 사용합니다"
 
 #: ../libyelp/yelp-sqlite-storage.c:150
 msgid "Database filename"
