--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+3.8.0
+=====
+* Stop checking for pangox and X11 (Emilio Pozuelo Monfort)
+* Updated translations:
+  tg    (Victor Ibragimov)
+  ko    (Changwoo Ryu)
+  ja    (Jiro Matsuzawa)
+  pt    (Duarte Loreto)
+  el    (Dimitris Spingos)
+
 3.7.90
 ======
 * Updated translations:
