--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,41 @@
+3.8.1
+=====
+* Added test token for classic mode (Matthias Clasen)
+* Updated translations:
+  as       (Nilamdyuti Goswami)
+  be       (Ihar Hrachyshka)
+  ca       (Gil Forcada)
+  ca@valencia (Carles Ferrando)
+  cs       (Marek Černocký)
+  da       (Ask H. Larsen)
+  de       (Mario Blättermann)
+  es       (Daniel Mustieles)
+  eu       (Inaki Larranaga Murgoitio)
+  fa       (Arash Mousavi)
+  fi       (Ville-Pekka Vainio)
+  fur      (Fabio Tomat)
+  gl       (Fran Diéguez)
+  gu       (Sweta Kothari)
+  he       (Yaron Shahrabani)
+  hi       (Rajesh Ranjan)
+  hu       (Balázs Úr)
+  id       (Andika Triwidada)
+  it       (Milo Casagrande)
+  lt       (Aurimas Černius)
+  ml       (Anish A)
+  nb       (Kjartan Maraas)
+  or       (ManojKumar Giri)
+  pa       (A S Alam)
+  pt_BR    (Enrico Nicoletto)
+  ru       (Dmitriy S. Seregin)
+  sl       (Matej Urbančič)
+  sr       (Мирослав Николић)
+  sr@latin (Мирослав Николић)
+  ta       (Shantha kumar)
+  te       (Krishnababu Krothapalli)
+  tg       (Victor Ibragimov)
+  tr       (Muhammet Kara)
+
 3.8.0
 =====
 * Stop checking for pangox and X11 (Emilio Pozuelo Monfort)
