--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+3.9.90
+======
+* Various updates for deprecated APIs in GLib and GTK
+* Added support for DocBook conditional processing on desktop environment
+* Updated translations:
+  mr       (Chetan Khona)
+  sk       (Pavol Klačanský)
+  zh_HK    (Chao-Hsiung Liao)
+  zh_TW    (Chao-Hsiung Liao)
+
 3.8.1
 =====
 * Added test token for classic mode (Matthias Clasen)
