Update Esperanto translation

--- a/po/eo.po
+++ b/po/eo.po
@@ -565,6 +565,10 @@ msgstr "Neniu kongruo"
 msgid "Get help with GNOME"
 msgstr "Ricevi helpon pri GNOME"
 
+#: ../yelp.desktop.in.in.h:3
+msgid "documentation;information;manual;"
+msgstr "dokumentado;informo;manlibro;gvidilo;"
+
 #~ msgid "_Share..."
 #~ msgstr "_Komunigi..."
 
