--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+3.9.91
+======
+* Correctly detect Unity for conditional processing, #707352 (Kevin Godby)
+* Fixed build issue with intltool and gettext, #706854 (Seán de Búrca)
+* Updated translations:
+  eo    (Ryan Lortie)
+  fr    (Alexandre Franke)
+  ga    (Seán de Búrca)
+
 3.9.90
 ======
 * Various updates for deprecated APIs in GLib and GTK
