--- a/po/et.po
+++ b/po/et.po
@@ -9,15 +9,15 @@
 # Allan Sims <allsi@eau.ee>, 2003.
 # Priit Laes <amd store20 com>, 2005, 2006.
 # Ivar Smolin <okul@linux.ee>, 2005–2011.
-# Mattias Põldaru <mahfiaz@gmail.com>, 2012.
+# Mattias Põldaru <mahfiaz@gmail.com>, 2012, 2013.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp MASTER\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=yelp&keywords=I18N+L10N&component=General\n"
-"POT-Creation-Date: 2012-07-16 07:47+0000\n"
-"PO-Revision-Date: 2012-08-08 07:15+0300\n"
+"POT-Creation-Date: 2013-09-10 06:22+0000\n"
+"PO-Revision-Date: 2013-09-11 23:08+0300\n"
 "Last-Translator: Mattias Põldaru <mahfiaz@gmail.com>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "Language: et\n"
@@ -25,7 +25,9 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"X-Generator: Poedit 1.5.4\n"
 
+#. (itstool) path: msg/msgstr
 #. ID: install.tooltip
 #. This is a format message used to format tooltips on install: links. These
 #. links allow users to install packages by clicking a link in the help. The
@@ -431,3 +433,6 @@ msgstr "Vastavused puuduvad"
 
 msgid "Get help with GNOME"
 msgstr "Abistab GNOME kasutamisel"
+
+msgid "documentation;information;manual;"
+msgstr "dokumentatsioon;informatsioon;manuaal;käsiraamat;juhend;juhised;"
