--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+3.10.0
+======
+* Updated translations:
+  ar    (Khaled Hosny)
+  et    (Mattias Põldaru)
+  lv    (Rūdolfs Mazurs)
+  th    (Theppitak Karoonboonyanan)
+  uk    (Daniel Korostil)
+
 3.9.91
 ======
 * Correctly detect Unity for conditional processing, #707352 (Kevin Godby)
