--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+3.10.1
+======
+* Updated GSettings install rule, #697815
+* Updated translations:
+  ro    (Daniel Șerbănescu)
+
 3.10.0
 ======
 * Updated translations:
