--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+3.11.1
+======
+* Implemented auto-reload for DocBook, #704821
+* Updated translations:
+  nl    (Wouter Bolsterlee)
+
 3.10.1
 ======
 * Updated GSettings install rule, #697815
