Add a trailing semicolon to keywords in Malayalam translation

--- a/po/ml.po
+++ b/po/ml.po
@@ -561,7 +561,7 @@ msgstr "ഗ്നോം സഹായം ലഭ്യമാക്കുക"
 
 #: ../yelp.desktop.in.in.h:3
 msgid "documentation;information;manual;"
-msgstr "പ്രമാണശേഖരണം;വിവരം;ഉപയോഗസഹായി"
+msgstr "പ്രമാണശേഖരണം;വിവരം;ഉപയോഗസഹായി;"
 
 #~ msgid "GNU Info Pages"
 #~ msgstr "GNU വിവര പേജുകള്‍"
