--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+3.11.91
+=======
+* Fixed critical crasher after closing windows
+* Fixed some deprecation warnings
+* Updated translations:
+  de    (Benjamin Steinwender)
+  gd    (GunChleoc)
+  kn    (Shankar Prasad)
+  lt    (Aurimas Černius)
+  ml    (Piotr Drąg)
+  pt_BR (Rafael Ferreira)
+  zh_CN (Tong Hui)
+
 3.11.1
 ======
 * Implemented auto-reload for DocBook, #704821
